<resources>
    <string name="app_name">Sha-Ked</string>
    <string name="login">LOGIN</string>
    <string name="user_id">User ID</string>
    <string name="user_password">Password</string>
    <string name="show_password">Show password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_without">START APP WITHOUT SERVER</string>
    <string name="server_settings">Server settings</string>
    <string name="forgot_password_big">FORGOT PASSWORD</string>
    <string name="email">Email</string>
    <string name="send">SEND</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Alexey Belonogov</string>
    <string name="nav_header_subtitle">belonogov.alekseys@gmail.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="no_permission">No permissions granted!</string>
    <string name="bluetooth_not_found">Bluetooth adapter not found</string>
    <string name="bt_is_off">Bluetooth is off</string>
    <string name="need_enable_bt">You need enable bluetooth to application can work normally.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="add_device">Add device</string>
    <string name="status">STATUS</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnected">DISCONNECTED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_data">Live data</string>
    <string name="get_gps_log">Get GPS log</string>
    <string name="size_of">Size of:</string>
    <string name="download_time">Download time</string>
    <string name="speed">Speed:</string>
    <string name="downloading">Downloading:</string>
    <string name="time_left">Time left:</string>
    <string name="download_log">Download log</string>
    <string name="device_not_connected">Device not connected!</string>
    <string name="send_log">Send Log</string>
    <string name="profile">Profile:</string>
    <string name="gps_settings">GPS settings</string>
    <string name="bt_settings">BT settings</string>
    <string name="event_settings">Event settings</string>
    <string name="button_led_settings">Button / LED settings</string>
    <string name="date_time_settings">Date / Time settings</string>
    <string name="logger_settings">Logger settings</string>
    <string name="consumption_calculator">Consumption calculator</string>
    <string name="firmware_update">Firmware update</string>
    <string name="save_profile">Save profile</string>
    <string name="send_settings">Send settings</string>
    <string name="time_interval_mode">Time interval mode:</string>
    <string name="time_interval">Time interval:</string>
    <string name="distance_mode">Distance mode:</string>
    <string name="distance">Distance:</string>
    <string name="heading_mode">Heading mode:</string>
    <string name="heading">Heading</string>
    <string name="motion_sernsor">Motion sensor:</string>
    <string name="sensitivityl">Sensetivityl:</string>
    <string name="stationary_detect_time">Stationary detect time</string>
    <string name="motion_detect_time">Motion detect time</string>
    <string name="master_mode">Master mode</string>
    <string name="gps_settings_master_mode">GPS settings \nMASTER MODE</string>
    <string name="gps_always_on">GPS Always ON</string>
    <string name="distance_interval_filter">Distance interval filter</string>
    <string name="distance_interval">Distance interval</string>
    <string name="speed_filter">Speed filter</string>
    <string name="save_frame_flash_every">Save frame to flash every</string>
    <string name="gps_timeout">GPS Timeout</string>
    <string name="timeout">Timeout</string>
    <string name="save_config">Save config</string>
    <string name="bt_activity_schedule">BT activity schedule</string>
    <string name="bt_active_time">BT Active time</string>
    <string name="enable_bt_on_stop">Enable BT on stop</string>
    <string name="enable_in_geozone">Enable in geozone</string>
    <string name="geozone">Geozone</string>
    <string name="schedule">Schedule</string>
    <string name="detect_gps_jamming">Detect GPS jamming</string>
    <string name="detect_low_memory">Detect low memory</string>
    <string name="button_enable">Button enable</string>
    <string name="led_mode">LED mode</string>
    <string name="address">Address</string>
    <string name="coordinate">Coordinate</string>
    <string name="radius">Radius</string>
    <string name="geozone_name">Geozone name</string>
    <string name="bt_geozone">BT geozone</string>
    <string name="add">Add</string>
    <string name="get_settings">Get Settings</string>
    <string name="last_read">Last read:</string>
    <string name="last_write">Last write:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="timezone">Timezone</string>
    <string name="use_gps_time">Use GPS time</string>
    <string name="default_settings">Default settings</string>
    <string name="erase_memory">Erase memory</string>
    <string name="erase_log_after_upload">Erase LOG after upload</string>
    <string name="enable_overwrite">Enable overwrite</string>
    <string name="save_directory">Save directory</string>
    <string name="bt_debugger">BT debugger</string>
    <string name="encryption_aes_256">Encryption AES 256</string>
    <string name="KEY">KEY</string>
    <string name="fw_update">FW Update</string>
    <string name="device_fw_version">Device FW version</string>
    <string name="import_fw">Import FW</string>
    <string name="new_fw_version">New FW version</string>
    <string name="settings_writed">Settings was sent to device</string>
    <string name="auto_connect_to_device">Auto connect to device</string>
    <string name="auto_download_log">Auto download log</string>
    <string name="ant_select">Ant select</string>
    <string name="pa_mode">PA mode</string>
    <string name="delete">Delete</string>
    <string name="save_log">Save Log</string>
    <string name="device_time">Device time:</string>
    <string name="device_date">Device date:</string>
</resources>
