<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:textAppearance="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:gravity="center"
            android:text="@string/forgot_password_big"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:textColor="#FFFFFF"
                android:textColorHint="#dddddddd" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/forgot_password_send_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>