<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:minHeight="45dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/settings_tex"

                android:tint="@color/main_gray"
                app:srcCompat="@drawable/ic_bluetooth_black_24dp" />

            <TextView
                android:id="@+id/settings_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:text="@string/bt_geozone"
                android:textSize="16dp"
                android:textStyle="bold" />
        </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/main_gray" />

            <RelativeLayout
                android:id="@+id/geozone_main_cont_next_to_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/geozone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/geozone_name"
                    android:background="@android:color/transparent"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/geozone_ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:backgroundTint="@color/main_gray"
                    android:layout_marginEnd="40dp"
                    android:layout_toLeftOf="@id/geozone_edit_tv"
                    />

                <TextView
                    android:id="@+id/geozone_edit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EDIT"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginEnd="8dp"
                    tools:visibility="visible"
                    android:layout_toLeftOf="@+id/geozone_ic_next_form"
                    />

                <ImageView
                    android:id="@+id/geozone_ic_next_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_android_arrow_dropright"
                    android:backgroundTint="@color/main_gray"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentRight="true"
                    />


            </RelativeLayout>

            <Button
                android:id="@+id/geozone_add_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"

                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>